force-app/main/default/objects/Territory_ID__c/Territory_ID__c.object-meta.xml
<CustomObject>
    <label>TerritoryID</label>
    <nameField>
        <label>TerritoryID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TerritoryIDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>