force-app/main/default/objects/Territory_ID__c/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <description>This field will represent a non geographic based territory assignment to be matched with the Territory Override on the Account</description>
    <inlineHelpText>This field will represent a non geographic based territory assignment to be matched with the Territory Override on the Account</inlineHelpText>
    <label>Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual Input</fullName>
            </value>
            <value>
                <fullName>Schools for the Deaf</fullName>
            </value>
            <value>
                <fullName>AMETEK Funded Schools</fullName>
            </value>
            <value>
                <fullName>Internal Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>