force-app/main/default/objects/Territory_ID__c/fields/StateAbbr__c.field-meta.xml
<CustomField>
    <fullName>StateAbbr__c</fullName>
    <label>StateAbbr</label>
    <length>60</length>
    <type>Text</type>
</CustomField>