force-app/main/default/objects/Territory_ID__c/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup Relationship to the Territory Name. This allows us to Group TerritoryIDs/ZipCodes under Territories</description>
    <inlineHelpText>Lookup Relationship to the Territory Name. This allows us to Group TerritoryIDs/ZipCodes under Territories</inlineHelpText>
    <label>Territory Name</label>
    <referenceTo>TerritoryName__c</referenceTo>
    <relationshipLabel>TerritoryIDs</relationshipLabel>
    <relationshipName>TerritoryIDs</relationshipName>
    <type>Lookup</type>
</CustomField>